--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -10,6 +10,21 @@
     background: var(--bg2);
 }
 
+.header .profilePic{
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    display: none;
+}
+
+.header .profilePic .avatar{
+    /* padding: 5px; */
+    width: 40px;
+    border-radius: 50%;
+    border: 2px solid var(--gr1);
+    background:var(--bg1);
+}
+
 .header .main {
     width: 100%;
     height: 70vmin;
@@ -18,6 +33,7 @@
     justify-content: space-between;
     flex-direction: row;
     padding: 20px;
+    flex-wrap: wrap;
 }
 
 .header img{
@@ -201,7 +217,32 @@
 } 
 
 
+@media(max-width: 600px) {
+    .header .main{
+        padding: 50px 0px 0px 10px;
+    }
+    .header .main .left{
+        width: 100%;
+        height: 100%;
+        margin-bottom: 50px;
+    }
 
+    .header .main .left .info{
+       font-size: 20px;
+    }
+
+    .header .main .left .heading{
+        font-size: 8vmin;
+    }
+
+    .header .main .right{
+       display: none;
+    }
+
+    .header .profilePic{
+        display: flex;
+    }
+}
 
 
 
